# Snorca-Plugin

./: .gitignore  CMakeLists.txt  build_release_vs2022.bat
deps_src/nanosvg/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/examples/: CMakeLists.txt
plugins/examples/arc_overhang/: arc_overhang_plugin.cpp  manifest.json
plugins/examples/custom_infill/: custom_infill_plugin.cpp  manifest.json
plugins/examples/noop/: manifest.json  noop_plugin.cpp
plugins/examples/round_prime_tower/: manifest.json  round_prime_tower_plugin.cpp
sdk/: README.md
sdk/docs/: extension_points.md  wipe_tower_shape.md
sdk/orca-plugin-sdk/: CMakeLists.txt  OrcaPluginSDKConfig.cmake.in
sdk/orca-plugin-sdk/include/orca/plugin/: AlgorithmProviderRegistry.hpp  ConfigSchemaRegistry.hpp  ConfigTypes.hpp  GCodeTransformRegistry.hpp  IWallGenerator.hpp  IWipeTowerPathWriter.hpp  IWipeTowerShape.hpp  InfillProviderRegistry.hpp  PipelineStageRegistry.hpp  PluginABI.hpp  PluginContext.hpp  PluginGUISupport.hpp  SliceDataAccess.hpp  SlicingHookBus.hpp  WipeTowerTypes.hpp
sdk/orca-plugin-sdk/include/orca/plugin/geometry/: ExtrusionTypes.hpp  Point.hpp  Polygon.hpp  Types.hpp  Vec.hpp
sdk/orca-plugin-sdk/include/orca/plugin/util/: RoundTowerPaths.hpp
sdk/orca-plugin-sdk/template/: CMakeLists.txt
sdk/orca-plugin-sdk/template/src/: plugin.cpp
src/: Snapmaker_Orca.cpp
src/libslic3r/: CMakeLists.txt  Config.cpp  Config.hpp  GCode.cpp  LayerRegion.cpp  Preset.cpp  Preset.hpp  Print.cpp  PrintApply.cpp  PrintBase.cpp  PrintBase.hpp  PrintConfig.cpp  PrintObject.cpp  PrintObjectSlice.cpp  SLAPrint.cpp
src/libslic3r/Fill/: FillBase.cpp  FillBase.hpp
src/libslic3r/GCode/: PostProcessor.cpp  WipeTower2.cpp  WipeTower2.hpp
src/libslic3r/Plugin/: AlgorithmProviderRegistry.hpp  ConfigSchemaRegistry.cpp  ConfigSchemaRegistry.hpp  GCodePluginHost.hpp  GCodeTransformRegistry.cpp  GCodeTransformRegistry.hpp  IWallGenerator.hpp  IWipeTowerShape.hpp  InfillProviderRegistry.hpp  InfillProviderRegistryImpl.cpp  InfillProviderRegistryImpl.hpp  PipelineStageHost.hpp  PipelineStageRegistry.cpp  PipelineStageRegistry.hpp  PluginABI.hpp  PluginContext.hpp  PluginGUISupport.cpp  PluginGUISupport.hpp  PluginIntegration.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  PluginManifest.cpp  PluginManifest.hpp  PluginSliceDataAccess.cpp  PluginSliceDataAccess.hpp  SharedLibrary.cpp  SharedLibrary.hpp  SliceDataAccess.hpp  SlicingHookBus.cpp  SlicingHookBus.hpp  WallGeneratorRegistry.cpp  WallGeneratorRegistry.hpp  WipeTowerPathWriterAdapter.inc  WipeTowerPluginBridge.hpp  WipeTowerShapeRegistry.cpp  WipeTowerShapeRegistry.hpp
src/libslic3r/Support/: SupportSpotsGenerator.cpp  SupportSpotsGenerator.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: BackgroundSlicingProcess.cpp  BitmapCache.cpp  ConfigManipulation.cpp  Field.cpp  GUI_App.cpp  Plater.cpp  Tab.cpp  Tab.hpp
src/slic3r/GUI/Plugin/: GUIContributionRegistry.cpp  GUIContributionRegistry.hpp  PluginGUIIntegration.cpp  PluginGUIIntegration.hpp
tests/fff_print/: fff_print_tests.cpp
tests/libslic3r/: CMakeLists.txt  libslic3r_tests.cpp  test_plugin_generic_sdk.cpp  test_plugin_system.cpp  test_plugin_wipe_tower_api.cpp
